HEAD
	+ Use different openssl output files to avoid any overlap
3.2.1
	+ Added missing EBox::Exceptions uses
3.2
	+ Set version to 3.2
3.1.3
	+ Fix to allow any wildcard level in DNS field of subject
	  alternative name
3.1.2
	+ Adapted to new CSS styles
3.1.1
	+ Adapted to updatedRowNotify call with no changes in values
	+ Added menu icon
3.1
	+ Removed 3.0.X migration code
	+ Depend on zentyal-core 3.1
3.0.3
	+ Do not show service certificates for removed modules
	+ Allow wildcard domain in DNS alternative name
3.0.2
	+ Adapted keys and cert downloader to the new utf8 fixes
	+ Better error control in subject alternatives, correct subject
	  alternative type case in the CGI
3.0.1
	+ Delete service certificates with old format on initialSetup()
	+ Added and used serviceId field for service certificates
	+ Unallow certificate fields with only blank characters, specific
	  error for country codes of more than two characters
3.0
	+ Change default organization for the certificates to Zentyal S.L.
2.3.7
	+ Remove useless report code
2.3.6
	+ Fixed CRL generation when the link to the latest CRL is broken
2.3.5
	+ Adapted to new Model management framework
2.3.4
	+ Fixed quoting in generate p12 command
2.3.3
	+ Packaging fixes for precise
2.3.2
	+ Updated Standards-Version to 3.9.2
2.3.1
	+ Fixed executable permissions in src/scripts
2.3
	+ Fixed variable interpolation in internal exception text
	+ Bugfix: do not try to get orgName in destroyCA after files are removed
	+ Replaced autotools with zbuildtools
2.2.2
	+ Fixed typo bug in method destroyCA
2.2.1
	+ Do not cache CA certificates values on module creation to play
	  along well with usercorner
	+ Default CN for certificates is now translatable
2.1.6
	+ Avoid service certificates errors when a module is uninstalled
2.1.5
	+ Reissue with Subject Alternative Names is now direct
	+ Reissue is only possible with expired and revoked certificates
	+ Use own code for launching OpenSSL commands
2.1.4