@@ -1,4 +1,6 @@
 HEAD
+	+ Allow wildcard certificate in service certificates
+	+ Better CN for CA certificate
 	+ Use different openssl output files to avoid any overlap
 3.2.1
 	+ Added missing EBox::Exceptions uses
